manifests/homeassistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
spec:
  serviceName: homeassistant
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      nodeSelector:
        homeassistant: "enabled"

      hostNetwork: true

      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:2025.2.5
          securityContext:
            privileged: true
          volumeMounts:
            - name: config-dir
              mountPath: /config

            - name: ha-config
              subPath: configuration.yaml
              mountPath: /config/configuration.yaml
              readOnly: true

            - name: backups
              mountPath: /config/backups
              readOnly: false

            - name: dbus
              mountPath: /run/dbus
              readOnly: true
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "1000m"
              memory: 2Gi
          livenessProbe:
            httpGet:
              path: /static/icons/favicon.ico
              port: 8123
            initialDelaySeconds: 30
      volumes:
        - name: ha-config
          configMap:
            name: homeassistant-config
        - name: config-dir
          persistentVolumeClaim:
            claimName: homeassistant-config-pvc
        - name: dbus
          hostPath:
            path: /run/dbus
            type: Directory
        - name: backups
          nfs:
            server: nas.home.lex.la
            path: /nfs/ha-backup
