manifests/homeassistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ha-service
subsets:
  - addresses:
      - ip: 72.16.113.46
    ports:
      - port: 8123
