manifests/homeassistant/ingress-home.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-home-service
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel
spec:
  ingressClassName: traefik
  rules:
    - host: ha.k8s.home.lex.la
      http:
        paths:
          - backend:
              service:
                name: ha-service
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ha.k8s.home.lex.la
      secretName: ha-service-tls
