manifests/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel
spec:
  rules:
    - host: ha.lex.la
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-service
                port:
                  number: 8123
  tls:
    - hosts:
        - ha.lex.la
      secretName: ha-tls
